--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,6 +4,8 @@
     background-color: #3f51b5;
     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
+    margin-left: 650px;
+    margin-top: 20px;
     display: inline-block;
     color: #fff;
     border: 0;
